--- a/helm-library/templates/_statefulset.yaml
+++ b/helm-library/templates/_statefulset.yaml
@@ -8,7 +8,7 @@ metadata:
     {{- include "helm-library.labels" . | nindent 4 }}
 spec:
   podManagementPolicy: Parallel
-  replicas: {{ .Values.deployment.replicas | default 1 }}
+  replicas: {{ .Values.deployment.replicaCount | default 1 }}
   serviceName: {{ .Values.name }}
   selector:
     matchLabels:
@@ -20,26 +20,47 @@ spec:
         aadpodidbinding: {{ required (printf $requiredMsg "name") .Values.name }}-identity-selector
         {{- end }}
         {{- include "helm-library.labels" . | nindent 8 }}
+        {{- with .Values.podLabels }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
       annotations:
+        {{- if .Values.deployment.injectLinkerd }}
         linkerd.io/inject: enabled
+        {{- end }}
         redeployOnChange: {{ randAlphaNum 5 | quote }}
+        {{- with .Values.podAnnotations }}
+        {{- toYaml . | nindent 8 }}
+        {{- end }}
     spec:
       {{- if .Values.serviceAccount }}
       {{- if .Values.serviceAccount.roleArn }}
       serviceAccountName: {{ .Values.serviceAccount.name | quote }}
       {{- end }}
       {{- end }}
-      {{- if .Values.deployment.imagePullSecret }}
+      {{- with .Values.deployment.imagePullSecrets }}
       imagePullSecrets:
-      - name: {{ required (printf $requiredMsg "deployment.imagePullSecret") .Values.deployment.imagePullSecret| quote }}
+        {{- toYaml . | nindent 8 }}
       {{- end }}
       securityContext:
-        fsGroup: {{ .Values.deployment.runAsUser | default 1000 }}
-        runAsUser: {{ .Values.deployment.runAsUser | default 1000 }}
-        runAsNonRoot: {{ .Values.deployment.runAsNonRoot | default true }}
+        {{- toYaml .Values.deployment.podSecurityContext | default "{}" | nindent 8 }}
       volumes:
       - name: temp-dir
         emptyDir: {}
+      {{- with .Values.deployment.volumes }}
+      {{- toYaml . | nindent 6 }}
+      {{- end }}
+      {{- with .Values.deployment.nodeSelector }}
+      nodeSelector:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.deployment.affinity }}
+      affinity:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
+      {{- with .Values.deployment.tolerations }}
+      tolerations:
+        {{- toYaml . | nindent 8 }}
+      {{- end }}
       containers:
       -
 {{ include "helm-library.container.tpl" . | indent 8 }}
