--- a/example/test-chart/templates/hpa.yaml
+++ b/example/test-chart/templates/hpa.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.autoscaling.enabled }}
+{{- if and .Values.autoscaling.enabled (eq .Values.deployment.kind "Deployment") }}
 {{- include "helm-library.horizontal-pod-autoscaler" (list . "chart.horizontal-pod-autoscaler") -}}
 {{- end }}
 {{- define "chart.horizontal-pod-autoscaler" -}}
