Fix typo in secret

--- a/helm-library/templates/_infiscal-secret.yaml
+++ b/helm-library/templates/_infiscal-secret.yaml
@@ -18,5 +18,5 @@ authentication:
       secretNamespace: {{ .Values.secret.secretNamespace | default "infiscal" | quote }}
 {{- end }}
 {{- define "helm-library.infiscal-secret" -}}
-{{- include "helm-library.util.merge" (append . "helm-library.secret.tpl") -}}
+{{- include "helm-library.util.merge" (append . "helm-library.infiscal-secret.tpl") -}}
 {{- end -}}
