--- a/helm-library/templates/_infiscal-secret.yaml
+++ b/helm-library/templates/_infiscal-secret.yaml
@@ -6,16 +6,17 @@ metadata:
   name: {{ required (printf $requiredMsg "name") .Values.name }}-infiscal-secret
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
-authentication:
-  universalAuth:
-    secretsScope:
-      projectSlug: {{ .Values.secret.projectSlug | default "Contabo" | quote }}
-      envSlug: {{ .Values.secret.envSlug | default "prod" | quote }}
-      secretsPath: {{ .Values.secret.secretsPath | default "/" | quote }}
-      recursive: {{ .Values.secret.recursive | default "true" | quote }}
-    credentialsRef:
-      secretName: {{ .Values.secret.secretName | default "universal-auth-credentials" | quote }}
-      secretNamespace: {{ .Values.secret.secretNamespace | default "infiscal" | quote }}
+spec:
+  authentication:
+    universalAuth:
+      secretsScope:
+        projectSlug: {{ .Values.secret.projectSlug | default "Contabo" | quote }}
+        envSlug: {{ .Values.secret.envSlug | default "prod" | quote }}
+        secretsPath: {{ .Values.secret.secretsPath | default "/" | quote }}
+        recursive: {{ .Values.secret.recursive | default "true" | quote }}
+      credentialsRef:
+        secretName: {{ .Values.secret.secretName | default "universal-auth-credentials" | quote }}
+        secretNamespace: {{ .Values.secret.secretNamespace | default "infiscal" | quote }}
 {{- end }}
 {{- define "helm-library.infiscal-secret" -}}
 {{- include "helm-library.util.merge" (append . "helm-library.infiscal-secret.tpl") -}}
