--- a/helm-library/templates/_infiscal-secret.yaml
+++ b/helm-library/templates/_infiscal-secret.yaml
@@ -13,7 +13,7 @@ spec:
         projectSlug: {{ .Values.secret.projectSlug | default "Contabo" | quote }}
         envSlug: {{ .Values.secret.envSlug | default "prod" | quote }}
         secretsPath: {{ .Values.secret.secretsPath | default "/" | quote }}
-        recursive: {{ .Values.secret.recursive | default "true" | quote }}
+        recursive: {{ .Values.secret.recursive | default true }}
       credentialsRef:
         secretName: {{ .Values.secret.secretName | default "universal-auth-credentials" | quote }}
         secretNamespace: {{ .Values.secret.secretNamespace | default "infiscal" | quote }}
