Add managed secret reference to infiscal

--- a/helm-library/templates/_infiscal-secret.yaml
+++ b/helm-library/templates/_infiscal-secret.yaml
@@ -3,10 +3,11 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name }}-infiscal-secret
+  name: {{ required (printf $requiredMsg "name") .Values.name }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
 spec:
+  resyncInterval: {{ .Values.secret.resyncInterval | default 10 }}
   authentication:
     universalAuth:
       secretsScope:
@@ -17,6 +18,10 @@ spec:
       credentialsRef:
         secretName: {{ .Values.secret.secretName | default "universal-auth-credentials" | quote }}
         secretNamespace: {{ .Values.secret.secretNamespace | default "infiscal" | quote }}
+  managedSecretReference:
+    secretName: {{ required (printf $requiredMsg "name") .Values.name }}
+    secretNamespace: {{ required (printf $requiredMsg "namespace") .Values.namespace }}
+    creationPolicy: {{ .Values.secret.creationPolicy | default "Owner" | quote }}
 {{- end }}
 {{- define "helm-library.infiscal-secret" -}}
 {{- include "helm-library.util.merge" (append . "helm-library.infiscal-secret.tpl") -}}
