Add default secret type

--- a/helm-library/templates/_secret.yaml
+++ b/helm-library/templates/_secret.yaml
@@ -6,7 +6,7 @@ metadata:
   name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
-type: {{ required (printf $requiredMsg "secret.type") .Values.secret.type | quote }}
+type: {{ .Values.secret.type | default "Opaque" | quote }}
 data: {}
 {{- end }}
 {{- define "helm-library.secret" -}}
