Add default namespace

--- a/helm-library/templates/_infiscal-secret.yaml
+++ b/helm-library/templates/_infiscal-secret.yaml
@@ -11,7 +11,7 @@ spec:
   authentication:
     universalAuth:
       secretsScope:
-        projectSlug: {{ .Values.secret.projectSlug | default "Contabo" | quote }}
+        projectSlug: {{ .Values.secret.projectSlug | default "contabo-k-nii" | quote }}
         envSlug: {{ .Values.secret.envSlug | default "prod" | quote }}
         secretsPath: {{ .Values.secret.secretsPath | default "/" | quote }}
         recursive: {{ .Values.secret.recursive | default true }}
@@ -20,7 +20,7 @@ spec:
         secretNamespace: {{ .Values.secret.secretNamespace | default "infiscal" | quote }}
   managedSecretReference:
     secretName: {{ required (printf $requiredMsg "name") .Values.name }}
-    secretNamespace: {{ required (printf $requiredMsg "namespace") .Values.namespace }}
+    secretNamespace: {{ .Values.namespace | default .Release.Namespace | quote }}
     creationPolicy: {{ .Values.secret.creationPolicy | default "Owner" | quote }}
 {{- end }}
 {{- define "helm-library.infiscal-secret" -}}
