--- a/helm-library/templates/_infiscal-secret.yaml
+++ b/helm-library/templates/_infiscal-secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: secrets.infisical.com/v1alpha1
 kind: InfisicalSecret
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name }}
+  name: {{ .Chart.Name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
 spec:
@@ -19,8 +19,8 @@ spec:
         secretName: {{ .Values.secret.secretName | default "universal-auth-credentials" | quote }}
         secretNamespace: {{ .Values.secret.secretNamespace | default "infiscal" | quote }}
   managedSecretReference:
-    secretName: {{ required (printf $requiredMsg "name") .Values.name }}
-    secretNamespace: {{ .Values.namespace | default .Release.Namespace | quote }}
+    secretName: {{ .Chart.Name | quote }}
+    secretNamespace: {{ .Release.Namespace | quote }}
     creationPolicy: {{ .Values.secret.creationPolicy | default "Owner" | quote }}
 {{- end }}
 {{- define "helm-library.infiscal-secret" -}}
