--- a/helm-library/templates/_cron-job.yaml
+++ b/helm-library/templates/_cron-job.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
+  name: {{ .Chart.Name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
 spec:
@@ -22,7 +22,11 @@ spec:
           - name: temp-dir
             emptyDir: {}
           containers:
+          {{- if .Values.container }}
+          - {{ include "helm-library.container" (list . (printf "%s.container" .Chart.Name )) }}
+          {{- else }}
           -
+          {{- end }}
 {{ include "helm-library.container.tpl" . | indent 12 }}
 {{- end }}
 {{- define "helm-library.cron-job" -}}
