--- a/helm-library/templates/_deployment.yaml
+++ b/helm-library/templates/_deployment.yaml
@@ -3,7 +3,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
+  name: {{ .Chart.Name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
   annotations:
@@ -19,7 +19,7 @@ spec:
     metadata:
       labels:
         {{- if .Values.azureIdentity }}
-        aadpodidbinding: {{ required (printf $requiredMsg "name") .Values.name }}-identity-selector
+        aadpodidbinding: {{ .Chart.Name }}-identity-selector
         {{- end }}
         {{- include "helm-library.labels" . | nindent 8 }}
       annotations:
@@ -33,7 +33,7 @@ spec:
       {{- end }}
       {{- if .Values.deployment.imagePullSecret }}
       imagePullSecrets:
-      - name: {{ required (printf $requiredMsg "deployment.imagePullSecret") .Values.deployment.imagePullSecret| quote }}
+      - name: {{ required (printf $requiredMsg "deployment.imagePullSecret") .Values.deployment.imagePullSecret | quote }}
       {{- end }}
       securityContext:
         fsGroup: {{ .Values.deployment.runAsUser | default 1000 }}
@@ -43,7 +43,11 @@ spec:
       - name: temp-dir
         emptyDir: {}
       containers:
+      {{- if .Values.container }}
+      - {{ include "helm-library.container" (list . (printf "%s.container" .Chart.Name )) }}
+      {{- else }}
       -
+      {{- end }}
 {{ include "helm-library.container.tpl" . | indent 8 }}
 {{- end }}
 {{- define "helm-library.deployment" -}}
