--- a/helm-library/templates/_ingress.yaml
+++ b/helm-library/templates/_ingress.yaml
@@ -1,9 +1,8 @@
 {{- define "helm-library.ingress.tpl" -}}
-{{- $requiredMsg := include "helm-library.default-check-required-msg" . -}}
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
+  name: {{ .Chart.Name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
   annotations:
@@ -23,7 +22,7 @@ spec:
   - hosts:
     - {{ .Values.ingress.host }}
     - www.{{ .Values.ingress.host }}
-    secretName: {{ .Values.name }}-tls
+    secretName: {{ .Chart.Name }}-tls
   {{- end }}
   rules:
 {{- if .Values.ingress.host }}
@@ -37,7 +36,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
+            name: {{ .Chart.Name | quote }}
             port:
               number: 80
 {{- if .Values.ingress.host }}
@@ -48,7 +47,7 @@ spec:
         pathType: Prefix
         backend:
           service:
-            name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
+            name: {{ .Chart.Name | quote }}
             port:
               number: 80
 {{- end }}
