--- a/helm-library/templates/_secret.yaml
+++ b/helm-library/templates/_secret.yaml
@@ -3,7 +3,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
+  name: {{ .Chart.Name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
 type: {{ .Values.secret.type | default "Opaque" | quote }}
