--- a/helm-library/templates/_statefulset.yaml
+++ b/helm-library/templates/_statefulset.yaml
@@ -3,13 +3,13 @@
 apiVersion: apps/v1
 kind: StatefulSet
 metadata:
-  name: {{ required (printf $requiredMsg "name") .Values.name | quote }}
+  name: {{ .Chart.Name | quote }}
   labels:
     {{- include "helm-library.labels" . | nindent 4 }}
 spec:
   podManagementPolicy: Parallel
   replicas: {{ .Values.deployment.replicas | default 1 }}
-  serviceName: {{ .Values.name }}
+  serviceName: {{ .Chart.Name | quote }}
   selector:
     matchLabels:
       {{- include "helm-library.selector-labels" . | nindent 6 }}
@@ -17,7 +17,7 @@ spec:
     metadata:
       labels:
         {{- if .Values.azureIdentity }}
-        aadpodidbinding: {{ required (printf $requiredMsg "name") .Values.name }}-identity-selector
+        aadpodidbinding: {{ .Chart.Name }}-identity-selector
         {{- end }}
         {{- include "helm-library.labels" . | nindent 8 }}
       annotations:
@@ -31,7 +31,7 @@ spec:
       {{- end }}
       {{- if .Values.deployment.imagePullSecret }}
       imagePullSecrets:
-      - name: {{ required (printf $requiredMsg "deployment.imagePullSecret") .Values.deployment.imagePullSecret| quote }}
+      - name: {{ required (printf $requiredMsg "deployment.imagePullSecret") .Values.deployment.imagePullSecret | quote }}
       {{- end }}
       securityContext:
         fsGroup: {{ .Values.deployment.runAsUser | default 1000 }}
@@ -41,7 +41,11 @@ spec:
       - name: temp-dir
         emptyDir: {}
       containers:
+      {{- if .Values.container }}
+      - {{ include "helm-library.container" (list . (printf "%s.container" .Chart.Name )) }}
+      {{- else }}
       -
+      {{- end }}
 {{ include "helm-library.container.tpl" . | indent 8 }}
 {{- end }}
 {{- define "helm-library.statefulset" -}}
