Remove skip default

--- a/helm-library/templates/_cron-job.yaml
+++ b/helm-library/templates/_cron-job.yaml
@@ -22,7 +22,7 @@ spec:
           - name: temp-dir
             emptyDir: {}
           containers:
-          {{- if and (.Values.container) (not .Values.container.skipDefault) }}
+          {{- if .Values.container }}
           - {{ include "helm-library.container" (list . (printf "%s.container" .Chart.Name )) }}
           {{- else }}
           -
